; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/extr_pcnet32.c_pcnet32_wio_write_csr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/amd/extr_pcnet32.c_pcnet32_wio_write_csr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCNET32_WIO_RAP = common dso_local global i64 0, align 8
@PCNET32_WIO_RDP = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i32)* @pcnet32_wio_write_csr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcnet32_wio_write_csr(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @PCNET32_WIO_RAP, align 8
  %10 = add i64 %8, %9
  %11 = call i32 @outw(i32 %7, i64 %10)
  %12 = load i32, i32* %6, align 4
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @PCNET32_WIO_RDP, align 8
  %15 = add i64 %13, %14
  %16 = call i32 @outw(i32 %12, i64 %15)
  ret void
}

declare dso_local i32 @outw(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
